fixed welcome notebook

--- a/examples/welcome.ipynb
+++ b/examples/welcome.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "Welcome to **GeneProspector**, a Python package that assists with managing and comparing feature (gene) selection\n",
+    "Welcome to **GemProspector**, a Python package that assists with managing and comparing feature (gene) selection\n",
     "results.\n"
    ]
   },
@@ -19,7 +19,7 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import GeneProspector as gp\n"
+    "import GemProspector as gp\n"
    ],
    "metadata": {
     "collapsed": false,
