demo data attempt

--- a/examples/welcome.ipynb
+++ b/examples/welcome.ipynb
@@ -49,6 +49,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "gp.AnnotatedGEM(\"~/data/osativa.nc\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%ls ~/data/\n",
     "\n"
    ],
    "metadata": {
