added demo lineaments

--- a/examples/feature_tour.ipynb
+++ b/examples/feature_tour.ipynb
@@ -1659,7 +1659,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 4,
@@ -1691,8 +1691,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 111 ms, sys: 4.53 ms, total: 116 ms\n",
-      "Wall time: 115 ms\n"
+      "CPU times: user 86.1 ms, sys: 24.4 ms, total: 111 ms\n",
+      "Wall time: 173 ms\n"
      ]
     }
    ],
@@ -1748,30 +1748,26 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:                  (Gene: 55986, Sample: 475)\n",
+       "Dimensions:     (Gene: 55986, Sample: 475)\n",
        "Coordinates:\n",
-       "  * Gene                     (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
-       "  * Sample                   (Sample) object 'SRX1423934' ... 'SRX1424408'\n",
+       "  * Gene        (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
+       "  * Sample      (Sample) object 'SRX1423934' 'SRX1423935' ... 'SRX1424408'\n",
        "Data variables:\n",
-       "    SampleSRR                (Sample) object ...\n",
-       "    Treatment                (Sample) object ...\n",
-       "    Time                     (Sample) int64 ...\n",
-       "    Tissue                   (Sample) object ...\n",
-       "    Genotype                 (Sample) object ...\n",
-       "    Subspecies               (Sample) object ...\n",
-       "    counts                   (Sample, Gene) int64 ...\n",
-       "    lengths                  (Gene) float64 ...\n",
-       "    rpkm_counts              (Sample, Gene) float64 ...\n",
-       "    tpm_counts               (Sample, Gene) float64 ...\n",
-       "    rpm_counts               (Sample, Gene) float64 ...\n",
-       "    quantile_normal_counts   (Sample, Gene) float64 ...\n",
-       "    quantile_uniform_counts  (Sample, Gene) float64 ...\n",
+       "    SampleSRR   (Sample) object ...\n",
+       "    Treatment   (Sample) object ...\n",
+       "    Time        (Sample) int64 ...\n",
+       "    Tissue      (Sample) object ...\n",
+       "    Genotype    (Sample) object ...\n",
+       "    Subspecies  (Sample) object ...\n",
+       "    counts      (Sample, Gene) int64 ...\n",
+       "    lengths     (Gene) float64 ...\n",
        "Attributes:\n",
-       "    all_labels:  ['SampleSRR', 'Treatment', 'Time', 'Tissue', 'Genotype', 'Su...\n",
-       "    discrete:    ['SampleSRR', 'Treatment', 'Tissue', 'Genotype', 'Subspecies']\n",
-       "    continuous:  ['SampleSRR', 'Time']\n",
-       "    quantile:    ['Treatment', 'Tissue', 'Genotype', 'Subspecies']\n",
-       "    incomplete:  []"
+       "    all_labels:                           ['SampleSRR', 'Treatment', 'Time', ...\n",
+       "    discrete:                             ['SampleSRR', 'Treatment', 'Tissue'...\n",
+       "    continuous:                           ['SampleSRR', 'Time']\n",
+       "    quantile:                             ['Treatment', 'Tissue', 'Genotype',...\n",
+       "    incomplete:                           []\n",
+       "    __GEMprospector.AnnotatedGEM.params:  {\"count_array_name\": \"counts\", \"gen..."
       ]
      },
      "execution_count": 7,
@@ -1875,10 +1871,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
