wondering why data doesn't load..

--- a/examples/welcome.ipynb
+++ b/examples/welcome.ipynb
@@ -49,7 +49,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gp.AnnotatedGEM(\"~/data/osativa.nc\")"
+    "gp.AnnotatedGEM(\"~/GEMprospector_demo_data/osativa.nc\")"
    ],
    "metadata": {
     "collapsed": false,
