moved to environment variavbles.

--- a/examples/feature_tour.ipynb
+++ b/examples/feature_tour.ipynb
@@ -1613,6 +1613,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "from pathlib import Path\n",
     "import holoviews as hv\n",
     "hv.extension(\"bokeh\")\n",
@@ -1647,8 +1648,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ANNOTATED_GEM_PATH = \"~/GEMprospector_demo_data/osativa.nc\"\n",
-    "LINEAMENT_DIR = \"~/GEMprospector_demo_data/lineaments/\""
+    "DEMO_DATA_DIR = os.environ.get('GEMPROSPECTOR_DATA', '~/GEMprospector_demo_data/')\n",
+    "ANNOTATED_GEM_PATH = DEMO_DATA_DIR + \"osativa.nc\"\n",
+    "LINEAMENT_DIR = DEMO_DATA_DIR + \"lineaments/\"\n",
+    "\n",
+    "print(ANNOTATED_GEM_PATH)\n",
+    "print(LINEAMENT_DIR)\n"
    ]
   },
   {
@@ -1698,6 +1703,7 @@
    ],
    "source": [
     "%%time\n",
+    "print(ANNOTATED_GEM_PATH)\n",
     "agem = gp.AnnotatedGEM(ANNOTATED_GEM_PATH, name=\"Oryza sativa\")"
    ]
   },
@@ -1871,10 +1877,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
