--- a/examples/welcome.ipynb
+++ b/examples/welcome.ipynb
@@ -19,7 +19,8 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import GEMprospector as gp\n"
+    "import GEMprospector as gp\n",
+    "import os"
    ],
    "metadata": {
     "collapsed": false,
@@ -49,7 +50,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gp.AnnotatedGEM(\"~/GEMprospector_demo_data/osativa.nc\")"
+    "DEMO_DATA_DIR = os.environ.get('GEMPROSPECTOR_DATA', '~/GEMprospector_demo_data/')\n",
+    "ANNOTATED_GEM_PATH = DEMO_DATA_DIR + \"osativa.nc\"\n",
+    "\n",
+    "gp.AnnotatedGEM(ANNOTATED_GEM_PATH)"
    ],
    "metadata": {
     "collapsed": false,
