--- a/examples/user_guide/creating_an_AnnotatedGEM.ipynb
+++ b/examples/user_guide/creating_an_AnnotatedGEM.ipynb
@@ -42,6 +42,7 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import GEMprospector as gp"
    ],
@@ -134,9 +135,15 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "COUNTS = \"~/GEMprospector_demo_data/rice_heat_drought.GEM.raw.txt\"\n",
-    "LABELS = \"~/GEMprospector_demo_data/srx_sample_annots.txt\"\n",
-    "GFF3 = \"~/GEMprospector_demo_data/all.gff3\""
+    "\n",
+    "DEMO_DATA_DIR = os.environ.get('GEMPROSPECTOR_DATA', '~/GEMprospector_demo_data/')\n",
+    "COUNTS = DEMO_DATA_DIR + \"rice_heat_drought.GEM.raw.txt\"\n",
+    "LABELS = DEMO_DATA_DIR + \"srx_sample_annots.txt\"\n",
+    "GFF3 = DEMO_DATA_DIR + \"all.gff3\"\n",
+    "\n",
+    "print(COUNTS)\n",
+    "print(LABELS)\n",
+    "print(GFF3)"
    ],
    "metadata": {
     "collapsed": false,
