--- a/examples/user_guide/Creating_an_AnnotatedGEM.ipynb
+++ b/examples/user_guide/Creating_an_AnnotatedGEM.ipynb
@@ -47,16 +47,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tyler/anaconda3/envs/GeneProspector/lib/python3.7/site-packages/tqdm/autonotebook.py:17: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  \" (e.g. in jupyter console)\", TqdmExperimentalWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -484,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -500,14 +491,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.18 s, sys: 118 ms, total: 2.3 s\n",
-      "Wall time: 2.31 s\n"
+      "CPU times: user 2.27 s, sys: 199 ms, total: 2.47 s\n",
+      "Wall time: 2.48 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "count_df = pd.read_csv(COUNTS, sep=\"\\t\", index_col=0)\n"
+    "count_df = pd.read_csv(COUNTS, sep=\"\\t\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SRX1423934</th>\n",
+       "      <th>SRX1423935</th>\n",
+       "      <th>SRX1423936</th>\n",
+       "      <th>SRX1423937</th>\n",
+       "      <th>SRX1423938</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>LOC_Os06g05820</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LOC_Os10g27460</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LOC_Os02g35980</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                SRX1423934  SRX1423935  SRX1423936  SRX1423937  SRX1423938\n",
+       "LOC_Os06g05820          20           2          22          11          23\n",
+       "LOC_Os10g27460           0           0           0           0           0\n",
+       "LOC_Os02g35980           0           0           0           0           0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_df.iloc[:3, :5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrrrr}\n",
+      "\\toprule\n",
+      "{} &  SRX1423934 &  SRX1423935 &  SRX1423936 &  SRX1423937 &  SRX1423938 \\\\\n",
+      "\\midrule\n",
+      "LOC\\_Os06g05820 &          20 &           2 &          22 &          11 &          23 \\\\\n",
+      "LOC\\_Os10g27460 &           0 &           0 &           0 &           0 &           0 \\\\\n",
+      "LOC\\_Os02g35980 &           0 &           0 &           0 &           0 &           0 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_df.iloc[:3, :5].to_latex())"
    ]
   },
   {
