Refactored AnnotatedGEM & updated documentation.

--- a/examples/user_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/Using_Workflows.ipynb
@@ -208,13 +208,13 @@
     {
      "data": {
       "text/plain": [
-       "<GEMprospector.LineamentCollection>\n",
+       "<GEMprospector.GeneSetCollection>\n",
        "    <GEMprospector.AnnotatedGEM>\n",
        "    Name: Oryza sativa\n",
        "    Selected GEM Variable: 'counts'\n",
        "        Gene   55986\n",
        "        Sample 475\n",
-       "Lineament Keys and # of Selected Genes\n",
+       "GeneSet Keys and # of Selected Genes\n",
        "    Lineament01322: 1094\n",
        "    Lineament01323: 1077\n",
        "    Lineament01321: 1064"
@@ -226,13 +226,13 @@
     }
    ],
    "source": [
-    "treatment_lcoll = gp.LineamentCollection.from_folder(agem, LINEAMENT_DIR, \n",
+    "treatment_lcoll = gp.GeneSetCollection.from_folder(agem, LINEAMENT_DIR, \n",
     "                                                     name=\"Treatment\", \n",
     "                                                     glob_filter=\"*Treatment*.nc\")\n",
-    "genotype_lcoll = gp.LineamentCollection.from_folder(agem, LINEAMENT_DIR, \n",
+    "genotype_lcoll = gp.GeneSetCollection.from_folder(agem, LINEAMENT_DIR, \n",
     "                                                    name=\"Genotype\", \n",
     "                                                    glob_filter=\"*Genotype*.nc\")\n",
-    "subspecies_lcoll = gp.LineamentCollection.from_folder(agem, LINEAMENT_DIR, \n",
+    "subspecies_lcoll = gp.GeneSetCollection.from_folder(agem, LINEAMENT_DIR, \n",
     "                                                      name=\"Subspecies\", \n",
     "                                                      glob_filter=\"*Subspecies*.nc\")\n",
     "\n",
@@ -272,13 +272,13 @@
     {
      "data": {
       "text/plain": [
-       "<GEMprospector.LineamentCollection>\n",
+       "<GEMprospector.GeneSetCollection>\n",
        "    <GEMprospector.AnnotatedGEM>\n",
        "    Name: Oryza sativa\n",
        "    Selected GEM Variable: 'counts'\n",
        "        Gene   55986\n",
        "        Sample 475\n",
-       "Lineament Keys and # of Selected Genes\n",
+       "GeneSet Keys and # of Selected Genes\n",
        "    Treatment: 1171\n",
        "    Genotype: 754\n",
        "    Subspecies: 312"
@@ -291,16 +291,16 @@
    ],
    "source": [
     "lineaments = {\n",
-    "    \"Subspecies\": gp.Lineament.from_lineaments(subspecies_lcoll.lineaments.values(),\n",
+    "    \"Subspecies\": gp.GeneSet.from_lineaments(subspecies_lcoll.lineaments.values(),\n",
     "                                               agem.gene_index,\n",
     "                                               name=\"Subspecies\", attrs=subspecies_attrs),\n",
-    "    \"Treatment\": gp.Lineament.from_lineaments(treatment_lcoll.lineaments.values(), agem.gene_index, \n",
+    "    \"Treatment\": gp.GeneSet.from_lineaments(treatment_lcoll.lineaments.values(), agem.gene_index, \n",
     "                                              name=\"Treatment\", attrs=treatment_attrs),\n",
-    "    \"Genotype\": gp.Lineament.from_lineaments(genotype_lcoll.lineaments.values(), agem.gene_index,\n",
+    "    \"Genotype\": gp.GeneSet.from_lineaments(genotype_lcoll.lineaments.values(), agem.gene_index,\n",
     "                                             name=\"Genotype\", attrs=genotype_attrs),\n",
     "}\n",
     "\n",
-    "lcoll = gp.LineamentCollection(gem=agem, lineaments=lineaments)\n",
+    "lcoll = gp.GeneSetCollection(gem=agem, lineaments=lineaments)\n",
     "lcoll"
    ]
   },
