major doc updates

--- a/examples/Feature_Tour.ipynb
+++ b/examples/Feature_Tour.ipynb
@@ -2607,7 +2607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gsf.plots.lineament_overlap_heatmap(lcoll)"
+    "gsf.plots.lineament_overlap_heatmap(gsc)"
    ]
   },
   {
