--- a/examples/About.ipynb
+++ b/examples/About.ipynb
@@ -3,19 +3,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
    },
    "source": [
-    "## About GeneSelector\n",
+    "## About GSForge\n",
     "\n",
-    "*GeneSelector* helps manage and compare gene (feature) selection methods for RNA-Seq data.\n",
+    "*GSForge* helps manage and compare gene (feature) selection methods for RNA-Seq data.\n",
     "It provides a framework of tools that assist in the collection, management and comparisson of feature selection results.\n",
     "\n",
     "\n",
-    "Constructed primarily from [NumFOCUS](https://numfocus.org/) projects, and the core pieces of *GeneSelector* are:\n",
+    "Constructed primarily from [NumFOCUS](https://numfocus.org/) projects, and the core pieces of *GSForge* are:\n",
     "+ Core data models that use `xarray` and the `netcdf` storage format.\n",
     "+ Interactive visualizations using `Holoviews` and `Datashader`.\n",
     "+ Feature selection workflows via `nextflow`.\n",
@@ -25,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Why use GeneSelector?\n",
     "\n",
@@ -38,62 +38,55 @@
     "And you should seriously consider using *GeneSelector* if you find yourself in more than one of the above categories.\n",
     "\n",
     "---"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### About the Ficklin Lab\n",
     "\n",
     "The Ficklin Lab in the Dept. of Horticulture at Washington State University is a computational dry lab dedicated to the creation of software tools, computational approaches and systems-level models that address basic and applied hypothesis at the molecular-level of agricultural systems.\n",
     "\n",
     "[Ficklin Laboratory](http://ficklinlab.cahnrs.wsu.edu/)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (base)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
