moved feature tour to dev for now, updated tutorial notebooks.

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -10,14 +10,27 @@
    "source": [
     "### Travis CI\n",
     "\n",
+    "...\n",
     "\n",
     "### nbsite & Documentation\n",
     "\n",
+    "You can test if all of the example notebooks run with [nbsmoke](https://github.com/pyviz-dev/nbsmoke) (this is what the travis ci will do) to check if they all run.\n",
+    "\n",
+    "```bash\n",
+    "pytest --nbsmoke-run examples/*.ipynb\n",
+    "```\n",
     "\n",
     "### Docker Images\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
