--- a/examples/user_guide/Creating_an_AnnotatedGEM.ipynb
+++ b/examples/user_guide/Creating_an_AnnotatedGEM.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import GEMprospector as gp"
+    "import GEMprospector as gsf"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "---\n",
     "\n",
-    "## The `GeneSelector.AnnotatedGEM` Object\n",
+    "## The `GSForge.AnnotatedGEM` Object\n",
     "\n",
     "Contains the gene expression matrix, which is indexed by a 'Gene'\n",
     "and 'Sample' coordinates. This `xarray.Dataset` object also contains\n",
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mgp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAnnotatedGEM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mgsf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAnnotatedGEM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
        "\u001b[0;31mDocstring:\u001b[0m     \n",
        "params(count_array_name=String, data=ClassSelector, gene_index_name=String, sample_index_name=String, name=String)\n",
        "\n",
@@ -108,6 +108,18 @@
        "    By default this dataset will be expected to have its indexes named \"Gene\"\n",
        "    and \"Sample\", although there are parameters to override those arrays and\n",
        "    index names used.\n",
+       "\n",
+       "    An AnnotatedGEM object can be created with one of the class methods:\n",
+       "    + from_files()\n",
+       "        A helper function for loading disparate GEM and annotation files through\n",
+       "        pandas.read_csv().\n",
+       "    + from_pandas()\n",
+       "        Reads in a GEM pandas.DataFrame and an optional annotation DataFrame. These\n",
+       "        must share the same sample index.\n",
+       "    + from_netcdf()\n",
+       "        Reads in from a .nc filepath. Usually this means loading a previously\n",
+       "        created AnnotatedGEM.\n",
+       "\n",
        "    \n",
        "\u001b[1;32mParameters of 'AnnotatedGEM'\n",
        "============================\n",
@@ -149,7 +161,7 @@
     }
    ],
    "source": [
-    "gp.AnnotatedGEM?"
+    "gsf.AnnotatedGEM?"
    ]
   },
   {
@@ -167,11 +179,11 @@
     "+ an xarray dataset -- usually user created.\n",
     "+ a pair of `pandas.DataFrame` objects (counts and labels).\n",
     "\n",
-    "Essentially we need to create an 'xarray.Dataset` object that contains all the data we care about.\n",
+    "Essentially we need to create an `xarray.Dataset` object that contains all the data we care about.\n",
     "For most users the simplest approach will be to prepare two `pandas.DataFrame` ojbects that have the samples\n",
     "either aligned or appropriately indexed.\n",
     "\n",
-    "`GEMprospector` comes with some helper functions to assist in this process. "
+    "`GSForge` comes with some helper functions to assist in this process. "
    ]
   },
   {
@@ -823,7 +835,7 @@
    ],
    "source": [
     "# View the xarray data attribute without assigning the AnnotatedGEM object.\n",
-    "gp.AnnotatedGEM.from_pandas(count_df=count_df, label_df=label_df, name=\"Osativa\").data"
+    "gsf.AnnotatedGEM.from_pandas(count_df=count_df, label_df=label_df, name=\"Osativa\").data"
    ]
   },
   {
@@ -857,7 +869,7 @@
    ],
    "source": [
     "# Now view GEMprospector's summary, ensure the count of samples and genes is correct.\n",
-    "gp.AnnotatedGEM.from_pandas(count_df=count_df, label_df=label_df, name=\"Osativa\")"
+    "gsf.AnnotatedGEM.from_pandas(count_df=count_df, label_df=label_df, name=\"Osativa\")"
    ]
   },
   {
@@ -902,7 +914,7 @@
    ],
    "source": [
     "%%time\n",
-    "agem = gp.AnnotatedGEM.from_files(\n",
+    "agem = gsf.AnnotatedGEM.from_files(\n",
     "    count_path=COUNTS,\n",
     "    label_path=LABELS,\n",
     "    # These are the default arguments passed to from_files,\n",
