updated doc links

--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "*GSForge* can be used in several ways and places in the analysis workflow per this flowchart:\n",
     "\n",
-    "![GSForge Flowchart](../doc/_static/GSForge_flowchart.svg)\n",
+    "![GSForge Flowchart](assets/GSForge_flowchart.svg)\n",
     "\n",
     "Note:\n",
     "+ Functions and models provided by *GSForge* are noted in **bold**.\n",
@@ -28,11 +28,11 @@
     "\n",
     "+ [User Guide](user_guide/index)\n",
     "    + [Creating an AnnotatedGEM](user_guide/Creating_an_AnnotatedGEM)\n",
-    "    + [Selecting Genes with Boruta]()\n",
-    "    + [Storing DESeq2 results as a GeneSet]()\n",
-    "    + [Storing EdgeR results as a GeneSet]()\n",
-    "    + [GeneSet Quality Assesment]()\n",
-    "    + [Plotting Guide]()\n",
+    "    + [Selecting Genes with Boruta](user_guide/Selecting_Genes_with_Boruta)\n",
+    "<!--     + [Storing DESeq2 results as a GeneSet](user_guide/Creating_an_AnnotatedGEM) -->\n",
+    "<!--     + [Storing EdgeR results as a GeneSet](user_guide/Creating_an_AnnotatedGEM) -->\n",
+    "    + [GeneSet Quality Assesment](user_guide/GeneSet_Analysis)\n",
+    "    + [Plotting Guide](user_guide/plotting_guide/index)\n",
     "\n",
     "---"
    ]
