--- a/examples/user_guide/Interface_Guide.ipynb
+++ b/examples/user_guide/Interface_Guide.ipynb
@@ -1772,20 +1772,41 @@
     "\n",
     "#### `Interface` Parameters\n",
     "\n",
-    "+ gem\n",
-    "+ gene_set_collection\n",
+    "`gem` \n",
+    "> An `AnnotatedGEM` object.\n",
     "\n",
-    "+ sample_subset\n",
+    "`gene_set_collection`\n",
+    "> A `GeneSetCollection` object.\n",
     "\n",
-    "+ selected_gene_sets\n",
-    "+ gene_set_mode\n",
+    "`sample_subset`\n",
+    "> An array or list of sample indexes to subset the count matrix by.\n",
     "\n",
-    "+ count_variable\n",
-    "+ annotation_variables\n",
-    "+ count_mask\n",
-    "+ annotation_mask\n",
+    "`selected_gene_sets`\n",
+    "> A list of keys that correspond to GeneSet objects from the GeneSetCollection. Such selections are used when subseting the count matrix.\n",
     "\n",
-    "+ count_transform\n",
+    "`gene_set_mode`\n",
+    "> How the selected gene sets found in `selected_gene_sets` are combined. The options are:  \n",
+    "+ `\"complete\"`: Returns the entire gene set of the AnnotatedGEM.  \n",
+    "+ `\"union\"`: Returns the union of the selected gene sets support.  \n",
+    "+ `\"intersection\"`: Returns the intersection of the selected gene sets support.\n",
+    "\n",
+    "\n",
+    "`count_variable`\n",
+    "> The name of the count matrix used.\n",
+    "\n",
+    "`annotation_variables`\n",
+    "> \n",
+    "\n",
+    "`count_mask`\n",
+    "\n",
+    "\n",
+    "`annotation_mask`\n",
+    "\n",
+    "\n",
+    "`count_transform`\n",
+    "\n",
+    "\n",
+    "#### `Interface` Functions and Properties\n",
     "\n",
     "\n",
     "#### How Indexes (data) are selected and returned"
