updated notebooks and raster function.

--- a/examples/user_guide/plotting_guide/Samplewise_Distributions.ipynb
+++ b/examples/user_guide/plotting_guide/Samplewise_Distributions.ipynb
@@ -2431,6 +2431,7 @@
     "    'bokeh',\n",
     "    'matplotlib'\n",
     ")\n",
+    "%matplotlib inline\n",
     "\n",
     "import GEMprospector as gsf"
    ]
