doc updates & clean up

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -10,7 +10,11 @@
    "source": [
     "### Travis CI\n",
     "\n",
-    "...\n",
+    "Travis CI is activated upon every push to the master branch.\n",
+    "Then, via the `.travis.yml` file:\n",
+    "+ Demo data is updated if needed.\n",
+    "+ The dockerfiles are built and pushed if the package installs correctly.\n",
+    "+ The notebook files are tested, and if no cells fail to run the documentation is updated.\n",
     "\n",
     "### nbsite & Documentation\n",
     "\n",
@@ -20,17 +24,37 @@
     "pytest --nbsmoke-run examples/*.ipynb\n",
     "```\n",
     "\n",
-    "### Docker Images\n",
+    "The documentation is built using travis ci integration.\n",
     "\n",
-    "\n"
+    "### Using Docker\n",
+    "\n",
+    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n",
+    "\n",
+    "To run `GSForge` using a jupyter notebook from a docker image:\n",
+    "\n",
+    "\n",
+    "***Jupyter Lab***\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v \"$PWD\":/home/jovyan/work systemsgenetics/gemprospector_interactive:latest\n",
+    "```\n",
+    "\n",
+    "***Jupyter Notebook***\n",
+    "\n",
+    "```bash\n",
+    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work jupyter/scipy-notebook:17aba6048f44\n",
+    "```\n",
+    "\n",
+    "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
