--- a/examples/Installation.ipynb
+++ b/examples/Installation.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -13,7 +12,7 @@
     "\n",
     "## Installation\n",
     "\n",
-    "`GEMprospector` works with Python 3.6+.\n",
+    "`GSForge` works with Python 3.6+.\n",
     "It is currently only tested on Linux.\n",
     "\n",
     "### From Github\n",
@@ -28,42 +27,45 @@
     "\n",
     "```bash\n",
     "pip install ./gemprospector/\n",
-    "```\n",
-    "\n",
-    "### Using a Docker Image\n",
-    "\n",
-    "\n"
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (base)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
