--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1692,7 +1692,7 @@
    ],
    "source": [
     "%%time\n",
-    "agem = gsf.AnnotatedGEM(ANNOTATED_GEM_PATifH, name=\"Oryza sativa\")"
+    "agem = gsf.AnnotatedGEM(ANNOTATED_GEM_PATH, name=\"Oryza sativa\")"
    ]
   },
   {
@@ -2218,10 +2218,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
