--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1800,7 +1800,7 @@
     "treatment_feature_importance = gsf.operations.rank_genes_by_model(\n",
     "    gsc,\n",
     "    selected_gene_sets=[\"Treatment\"],\n",
-    "    selected_annotation_variables=\"Treatment\",\n",
+    "    annotation_variables=\"Treatment\",\n",
     "    model=gene_rank_mdl,\n",
     "    n_iterations=3\n",
     ")"
@@ -2218,10 +2218,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
