--- a/examples/user_guide/Interface_Guide.ipynb
+++ b/examples/user_guide/Interface_Guide.ipynb
@@ -1918,7 +1918,7 @@
     }
    ],
    "source": [
-    "demo_interface = gsf.Interface(agem, selected_annotation_variables=\"Treatment\")\n",
+    "demo_interface = gsf.Interface(agem, annotation_variables=\"Treatment\")\n",
     "demo_interface.y_annotation_data"
    ]
   },
