--- a/examples/Welcome.ipynb
+++ b/examples/Welcome.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "*GSForge* can be used in several ways and places in the analysis workflow per this flowchart:\n",
     "\n",
-    "![GSForge Flowchart](assets/GSForge_flowchart.svg)\n",
+    "<img src=\"assets/GSForge_flowchart.svg\" alt=\"GSForge Flowchart\" width=\"750\"/>\n",
     "\n",
     "Note:\n",
     "+ Functions and models provided by *GSForge* are noted in **bold**.\n",
