fixed renamed args in notebooks

--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1905,7 +1905,7 @@
     "treatment_fwe = gsf.operations.analytics.calculate_family_wise_error_rates(\n",
     "    gsc,\n",
     "    selected_gene_sets=[\"Treatment\"],\n",
-    "    selected_annotation_variables=\"Treatment\",\n",
+    "    annotation_variables=\"Treatment\",\n",
     "    model=gene_rank_mdl,\n",
     "    n_iterations=3\n",
     ")"
@@ -1977,7 +1977,7 @@
     "treatment_nrd = gsf.operations.analytics.calculate_null_rank_distribution(\n",
     "    gsc,\n",
     "    selected_gene_sets=[\"Treatment\"],\n",
-    "    selected_annotation_variables=\"Treatment\",\n",
+    "    annotation_variables=\"Treatment\",\n",
     "    model=gene_rank_mdl,\n",
     "    n_iterations=3\n",
     ")"
