--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -22,6 +22,9 @@
     "\n",
     "```bash\n",
     "pytest --nbsmoke-run examples/*.ipynb\n",
+    "pytest --nbsmoke-run examples/user_guide/*.ipynb\n",
+    "pytest --nbsmoke-run examples/user_guide/plotting_guide/*.ipynb\n",
+    "\n",
     "```\n",
     "\n",
     "The documentation is built using travis ci integration.\n",
