--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -33,6 +33,11 @@
     "\n",
     "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n",
     "\n",
+    "***Update the image***\n",
+    "```bash\n",
+    "docker pull systemsgenetics/gemprospector_interactive:latest\n",
+    "```\n",
+    "\n",
     "To run `GSForge` using a jupyter notebook from a docker image:\n",
     "\n",
     "\n",
@@ -46,7 +51,7 @@
     "***Jupyter Notebook***\n",
     "\n",
     "```bash\n",
-    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work jupyter/scipy-notebook:17aba6048f44\n",
+    "docker run -p 8888:8888 -v \"$PWD\":/home/jovyan/work systemsgenetics/gemprospector_interactive:latest\n",
     "```\n",
     "\n",
     "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image."
