renamed project and repo to GSForge

--- a/examples/Installation.ipynb
+++ b/examples/Installation.ipynb
@@ -20,13 +20,13 @@
     "***Clone the repository.***\n",
     "\n",
     "```bash\n",
-    "git clone git@github.com:SystemsGenetics/GEMprospector.git\n",
+    "git clone git@github.com:SystemsGenetics/GSForge.git\n",
     "```\n",
     "\n",
     "***Install via local pip:***\n",
     "\n",
     "```bash\n",
-    "pip install ./gemprospector/\n",
+    "pip install ./gsforge/\n",
     "```"
    ]
   },
@@ -59,10 +59,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
