--- a/examples/user_guide/Creating_an_AnnotatedGEM.ipynb
+++ b/examples/user_guide/Creating_an_AnnotatedGEM.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import GEMprospector as gsf"
+    "import GSForge as gsf"
    ]
   },
   {
@@ -1209,10 +1209,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
