--- a/examples/user_guide/GEM_Normalization.ipynb
+++ b/examples/user_guide/GEM_Normalization.ipynb
@@ -2348,7 +2348,7 @@
     }
    ],
    "source": [
-    "import GEMprospector as gp\n",
+    "import GSForge as gp\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import holoviews as hv\n",
@@ -2634,10 +2634,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
