--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -1615,7 +1615,7 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "import GEMprospector as gsf"
+    "import GSForge as gsf"
    ]
   },
   {
@@ -2218,10 +2218,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
