--- a/examples/user_guide/plotting_guide/Genewise_Scatter_and_Distributions.ipynb
+++ b/examples/user_guide/plotting_guide/Genewise_Scatter_and_Distributions.ipynb
@@ -1598,7 +1598,7 @@
     "#     'matplotlib'\n",
     ")\n",
     "\n",
-    "import GEMprospector as gsf"
+    "import GSForge as gsf"
    ]
   },
   {
@@ -1839,6 +1839,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
