--- a/examples/user_guide/plotting_guide/Samplewise_Distributions.ipynb
+++ b/examples/user_guide/plotting_guide/Samplewise_Distributions.ipynb
@@ -2433,7 +2433,7 @@
     ")\n",
     "%matplotlib inline\n",
     "\n",
-    "import GEMprospector as gsf"
+    "import GSForge as gsf"
    ]
   },
   {
