--- a/examples/user_guide/Interface_Guide.ipynb
+++ b/examples/user_guide/Interface_Guide.ipynb
@@ -1694,7 +1694,7 @@
     "    'matplotlib'\n",
     ")\n",
     "\n",
-    "import GEMprospector as gsf"
+    "import GSForge as gsf"
    ]
   },
   {
@@ -1947,6 +1947,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
