--- a/examples/user_guide/workflow_guide/Using_Workflows.ipynb
+++ b/examples/user_guide/workflow_guide/Using_Workflows.ipynb
@@ -87,7 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "import GEMprospector as gp\n",
+    "import GSForge as gp\n",
     "from pathlib import Path\n",
     "import holoviews as hv\n",
     "hv.extension(\"bokeh\")"
@@ -351,6 +351,15 @@
   },
   "nbsphinx": {
    "execute": "never"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
